# PQC-Standards-Implementation

./: .gitignore  LICENSE  MANUAL.md  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-26-phase1-mlkem-rust.md  2026-04-01-fn-dsa-hqc-implementation-plan.md
dotnet/: PqcStandards.slnx
dotnet/FnDsa/: FnDsa.csproj
dotnet/FnDsa/src/: Encode.cs  Fft.cs  FnDsaApi.cs  Gaussian.cs  NtruKeygen.cs  Ntt.cs  Params.cs  Shake256Impl.cs  Sign.cs  Verify.cs
dotnet/FnDsa/src/Hqc/: GF2.cs  GF256.cs  HqcKem.cs  HqcParams.cs  ReedMuller.cs  ReedSolomon.cs  TensorCode.cs
dotnet/FnDsa/tests/: FnDsaTests.cs  FnDsaTests.csproj  HqcTests.cs
dotnet/src/PqcStandards/: PqcStandards.csproj
dotnet/src/PqcStandards/Common/: Keccak.cs
dotnet/tests/PqcStandards.Tests/: MlKemTests.cs
go/fndsa/: fndsa.go  fndsa_test.go  kat_test.go
go/hqc/: hqc.go  hqc_test.go
go/hybrid/: hybrid_kem.go  hybrid_kem_test.go
go/internal/encode/: encode.go  encode_test.go
go/internal/fndsa/: encode.go  encode_test.go  fft.go  fft_test.go  gaussian.go  gaussian_test.go  ntru.go  ntru_test.go  ntt.go  params.go  sign.go  sign_test.go  tables.go  verify.go  verify_test.go
go/internal/hqc/: gf2.go  gf256.go  hqc_test.go  kem.go  params.go  rm.go  rs.go  tensor.go
go/internal/mldsa/: decompose.go  decompose_test.go  hash.go
go/internal/ntt/: ntt.go  ntt_test.go
go/internal/slhdsa/: address.go  address_test.go  fors.go  hash.go  hypertree.go  params.go  utils.go  wots.go  xmss.go
go/mldsa/: dsa.go  dsa_test.go
go/slhdsa/: slhdsa.go  slhdsa_test.go
java/: pom.xml
js/: package.json
js/fndsa/: package-lock.json  package.json
js/fndsa/src/: api.js  encode.js  fft.js  gaussian.js  index.js  ntru.js  ntt.js  params.js  sign.js  verify.js
js/fndsa/test/: fndsa.test.js
js/hqc/: package.json
js/hqc/src/: gf2.js  gf256.js  index.js  kem.js  params.js  rm.js  rs.js  tensor.js
js/hqc/test/: hqc.test.js
js/src/: compress.js  encode.js
js/src/mldsa/: decompose.js  dsa.js  encode.js  hash.js  index.js
js/src/slhdsa/: address.js  fors.js  hash.js  hypertree.js  index.js  params.js  slhdsa.js  utils.js  wots.js  xmss.js
js/test/: core.test.js  kem.test.js  mldsa.test.js  slhdsa.test.js
php/: composer.json  phpunit.xml
php/src/FnDsa/: Encode.php  FFT.php  FnDsa.php  Gaussian.php  NTRUKeygen.php  NTT.php  Params.php  Sign.php  Verify.php
php/src/Hqc/: GF2.php  GF256.php  Hqc.php  HqcParams.php  ReedMuller.php  ReedSolomon.php  TensorCode.php
php/src/MlDsa/: DsaNtt.php
php/src/MlKem/: Encode.php  Ntt.php
php/tests/: FnDsaTest.php  HqcTest.php
python/: pyproject.toml
python/composite/: __init__.py  composite_sig.py  ed25519_pure.py
python/fndsa/: __init__.py  api.py  encode.py  fft.py  gaussian.py  ntru.py  ntt.py  params.py  sign.py  verify.py
python/hqc/: __init__.py  gf2.py  gf256.py  kem.py  params.py  rm.py  rs.py  tensor.py
python/hybrid/: __init__.py  ecdh_nist.py  hybrid_kem.py  x25519.py
python/mldsa/: dsa.py
python/mlkem/: __init__.py  field.py  hash_funcs.py  kem.py  kpke.py  ntt.py  params.py
python/slhdsa/: __init__.py  address.py  fors.py  hash_funcs.py  hypertree.py  params.py  slhdsa.py  utils.py  wots.py  xmss.py
python/tests/: test_composite.py  test_core.py  test_fndsa.py  test_hqc.py  test_hybrid.py  test_kem.py  test_slhdsa.py
rust/: Cargo.toml
rust/composite-sig/: Cargo.toml
rust/composite-sig/src/: composite_sig.rs  lib.rs
rust/fn-dsa/: Cargo.toml
rust/fn-dsa/src/: encode.rs  fft.rs  gaussian.rs  lib.rs  ntru.rs  ntt.rs  params.rs  sign.rs  verify.rs
rust/hqc/: Cargo.toml
rust/hqc/src/: gf2.rs  gf256.rs  kem.rs  lib.rs  params.rs  rm.rs  rs.rs  tensor.rs
rust/ml-dsa/: Cargo.toml
rust/ml-dsa/src/: decompose.rs  hash.rs  lib.rs  params.rs
rust/ml-kem/: Cargo.toml
rust/ml-kem/benches/: ml_kem_bench.rs
rust/ml-kem/src/: encode.rs  hash.rs  kem.rs  kpke.rs  lib.rs  ntt.rs  params.rs
rust/pqc-common/: Cargo.toml
rust/pqc-common/src/: field.rs  lib.rs
rust/slh-dsa/: Cargo.toml
rust/slh-dsa/src/: hash.rs  lib.rs  params.rs  slhdsa.rs
rust/slh-dsa/tests/: integration.rs
swift/: Package.swift
swift/.build/: build.db  plugin-tools.yaml
swift/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
swift/Sources/PQCStandards/Composite/: CompositeSig.swift
swift/Sources/PQCStandards/Hybrid/: HybridKem.swift
swift/Sources/PQCStandards/MlDsa/: Decompose.swift  DsaEncode.swift  DsaField.swift  DsaHash.swift  DsaNtt.swift  DsaParams.swift  MlDsa.swift
swift/Sources/PQCStandards/MlKem/: Compress.swift  Encode.swift  Field.swift  HashFuncs.swift  Kpke.swift  MlKem.swift  Ntt.swift  Params.swift  Sampling.swift
swift/Sources/PQCStandards/SlhDsa/: Address.swift  Fors.swift  Hypertree.swift  SlhDsa.swift  SlhHash.swift  SlhParams.swift  Wots.swift  Xmss.swift
swift/Sources/PQCStandards/Tls/: CipherSuites.swift  NamedGroups.swift  SigAlgorithms.swift
swift/Tests/PQCStandardsTests/: HybridTests.swift  MlDsaTests.swift  MlKemTests.swift  SlhDsaTests.swift  TlsTests.swift
swift/fndsa/: Package.swift
swift/fndsa/Sources/FnDsa/: Debug.swift  Encode.swift  FFT.swift  FnDsa.swift  Gaussian.swift  Keccak.swift  NTRUKeygen.swift  NTT.swift  (+3 more)
swift/hqc/: Package.swift
test-vectors/composite-sig/: ML-DSA-44+Ed25519.json  ML-DSA-65+ECDSA-P256.json  ML-DSA-65+Ed25519.json  ML-DSA-87+Ed25519.json
test-vectors/fn-dsa/: FN-DSA-1024.json  FN-DSA-512.json
test-vectors/hybrid-kem/: ECDHP256-MLKEM768.json  ECDHP384-MLKEM1024.json  X25519-MLKEM1024.json  X25519-MLKEM768.json
test-vectors/ml-dsa/: ML-DSA-44.json  ML-DSA-65.json  ML-DSA-87.json
test-vectors/ml-kem/: ML-KEM-1024.json  ML-KEM-512.json  ML-KEM-768.json
test-vectors/pq-tls/: pq-tls.json
test-vectors/slh-dsa/sha2/: SLH-DSA-SHA2-128f.json  SLH-DSA-SHA2-128s.json  SLH-DSA-SHA2-192f.json  SLH-DSA-SHA2-192s.json  SLH-DSA-SHA2-256f.json  SLH-DSA-SHA2-256s.json
test-vectors/slh-dsa/shake/: SLH-DSA-SHAKE-128f.json  SLH-DSA-SHAKE-128s.json  SLH-DSA-SHAKE-192f.json  SLH-DSA-SHAKE-192s.json  SLH-DSA-SHAKE-256f.json  SLH-DSA-SHAKE-256s.json
(+494 files in other folders)
