[workspace]
resolver = "2"
members = [
    "pqc-common",
    "ml-kem",
    "ml-dsa",
    "slh-dsa",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/baron-chain/PQC-Standards-Implementation"

[workspace.dependencies]
pqc-common = { path = "./pqc-common" }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
rand = "0.8"
