[package]
name = "fn-dsa"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure Rust implementation of FN-DSA (FIPS 206 / FALCON)"

[dependencies]
sha3 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
num-bigint = { version = "0.4", features = [] }
num-traits = "0.2"

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
