[package]
name = "ml-kem"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure Rust implementation of ML-KEM (FIPS 203)"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "post-quantum", "ml-kem", "kyber", "kem"]

[dependencies]
pqc-common = { workspace = true }
sha3 = { workspace = true }
digest = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true, optional = true }
rand_core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[features]
default = ["alloc", "zeroize"]
std = ["alloc", "pqc-common/std", "sha3/std", "subtle/std", "rand_core/std"]
alloc = []
zeroize = ["dep:zeroize", "pqc-common/zeroize"]

[[bench]]
name = "ml_kem_bench"
harness = false
