[package]
name = "slh-dsa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure Rust implementation of SLH-DSA (FIPS 205)"

[dependencies]
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.8"
hex = "0.4"

[features]
default = []
std = ["sha2/std", "sha3/std"]
